--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ chrome-profiler-events*.json
 speed-measure-plugin*.json
 
 # IDEs and editors
-/frontend/.idea
+/.idea
 .project
 .classpath
 .c9/
